# pam_e4crypt

./: .gitignore  CMakeLists.txt  README.md  init_wrapper_files.sh  kconfig  pam_e4crypt.c  prepare_image.sh  run-qemu
cmake/Modules/: FindKeyutils.cmake  FindUUID.cmake
pam.d/: test
scripts/: complete_setup.sh  test_secret.sh
